# statisticalLearning

./: pyproject.toml
statisticallearning/linear_regression/: intro_linear_regression.ipynb
statisticallearning/logistic_regression/: intro_logistic_regression.ipynb
