[tool.poetry]
name = "statisticallearning"
version = "0.1.0"
description = ""
authors = ["6076paras <47757847+6076paras@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
